@@ -19,4 +19,4 @@
 from .encoder_syl import SyllogisticEncoder
 
 from .syllogism import decode_response, encode_response, encode_task, SYLLOGISMS, RESPONSES, \
-    Syllogism, VALID_SYLLOGISMS, INVALID_SYLLOGISMS, SYLLOGISTIC_FOL_RESPONSES
+    Syllogism, VALID_SYLLOGISMS, INVALID_SYLLOGISMS, SYLLOGISTIC_FOL_RESPONSES, dataset_to_matrix
